ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
  - host: lucky.application.com
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /jenkins
        pathType: Prefix


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sonarqube
  namespace: sonarqube
spec:
  ingressClassName: nginx
  rules:
  - host: lucky.application.com
    http:
      paths:
      - backend:
          service:
            name: sonarqube
            port:
              number: 9000
        path: /sonarqube
        pathType: Prefix
